--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,17 @@
 	<artifactId>cucumber-gf</artifactId>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
-	<properties>
+   <properties>
 		<java.version>1.8</java.version>
 		<junit.version>4.12</junit.version>
 		<cucumber.version>4.0.0</cucumber.version>
 		<cucumber.pro.version>2.0.4</cucumber.pro.version>
 		<maven.compiler.version>3.3</maven.compiler.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
 	<dependencies>
-		<dependency>
+	
+	<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
 			<version>${cucumber.version}</version>
@@ -40,6 +41,13 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		 <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.14.3</version>
+      <scope>test</scope>
+    </dependency>   
+	
 	</dependencies>
 	<build>
 		<plugins>
@@ -61,4 +69,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
